calendar: if too much on one day, certain items wouldn't be visible anymore: now resolved with a scrollbar in the cell of the day if it overflows

--- a/core/static/registration/style.css
+++ b/core/static/registration/style.css
@@ -80,12 +80,17 @@ td {
 
 #calendar table {
     width: 100%;
+    table-layout:fixed
 }
 
 #calendar table tr th {
     text-align: center;
     font-size: 16px;
     color: #111;
+}
+
+#calendar table td {
+	height:100%;
 }
 
 #calendar .month {
@@ -183,7 +188,7 @@ td {
 	margin-top: 3px;
 }
 
-#calendarfield1 {
+#calendarfield5 {
 	font-size:14px !important;
 	color:#ffffff;
 	background-color: #d86762; 
@@ -204,7 +209,6 @@ td {
 	margin-bottom: :3px;
 	margin-top: 3px;
 }
-
 
 #calendarfield3 {
 	font-size:14px !important;
